# rust-tokio-retry

./: Cargo.toml  README.md
examples/: simple.rs
src/: action.rs  condition.rs  error.rs  future.rs  lib.rs  middleware.rs
src/strategies/: exponential_backoff.rs  fixed_interval.rs  from_iterator.rs  mod.rs  no_retry.rs
src/strategy/: deadline.rs  decorators.rs  exponential_backoff.rs  fibonacci_backoff.rs  fixed_interval.rs  jitter.rs  jittered.rs  limited_delay.rs  limited_retries.rs  mod.rs
tests/: future.rs
