[package]
name = "tokio-retry"
version = "0.2.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Extensible, asynchronous retry behaviours for futures/tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srijs/rust-tokio-retry"
documentation = "https://docs.rs/tokio-retry"
keywords = ["futures", "tokio", "retry", "exponential", "backoff"]
edition = "2018"

[dependencies]
rand = "0.4.0"
tokio = { version = "1.0", features = ["time"] }
pin-project = "0.4.6"

[dev-dependencies]
quickcheck = "0.6.0"
tokio = { version = "1.0", features = ["full"] }