[package]
name = "tokio-retry"
version = "0.3.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Extensible, asynchronous retry behaviours for futures/tokio"
license = "MIT"
readme = "README.md"
repository = "https://github.com/srijs/rust-tokio-retry"
documentation = "https://docs.rs/tokio-retry"
keywords = ["futures", "tokio", "retry", "exponential", "backoff"]
edition = "2018"

[dependencies]
rand = "0.8.3"
tokio = { version = "1.0", features = ["time"] }
pin-project = "1.0.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
